# ixgbe_direct_datapath

./: .gitignore  CMakeLists.txt  Makefile  README.rst
.githooks/: pre-commit
.github/workflows/: build_matrix.yml  codeql.yml  static_analysis.yml
selftests/: ixgbe_mmio.c  market_close.py  market_hours_start.py  selftests.h
src/: datapath.h  datapath_clean.h  exit_path.h  hw.h  iex.h  init.c  ixgbe.h  ixgbe_rx.c  ixgbe_tx.c  main.c  management.h  mem.c  pci.c  rx.h
